<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <ImageButton
        android:id="@+id/pentagon_board_image_button"
        android:layout_width="244dp"
        android:layout_height="205dp"
        android:contentDescription="@string/pentagon_board_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.966"
        app:srcCompat="@drawable/pentagon_board" />

    <ImageButton
        android:id="@+id/rectangle_board_image_button"
        android:layout_width="248dp"
        android:layout_height="205dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/rectangle_board_description"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle_board"
        app:layout_constraintBottom_toTopOf="@+id/pentagon_board_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.928" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="35dp"
        android:fontFamily="serif"
        android:text="@string/select_board_string"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:id="@+id/triangle_board_image_button"
        android:layout_width="248dp"
        android:layout_height="201dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/triangle_board_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_board_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/triangle_board" />

    <Button
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="51dp"
        android:layout_height="25dp"
        android:background="#AAB4E8"
        android:textAlignment="center"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>